# demo-temporary

./: README.md  calculator.py  config.json  list_files.py  tasks.py
.github/workflows/: main.yml
docs/: conf.py  index.rst
docs/source/: advanced_operations.rst  basic_operations.rst  conf.py  get_names.py  index.rst  initial_write.py  load_config.py  make_api.py  usage.rst
docs/source/modules/: built_in_themes.py  extract_func_names.py  file_write.py  get_stars.py
previous/: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
previous/src/smart_documentation/: BaseDocumentation.py  __init__.py  __main__.py  smart_documentation_main.py
previous/src/smart_documentation/Templates/default/Template/docs/: Makefile  conf.py  index.rst  make.bat
previous/src/smart_documentation/Templates/default/Template/docs/_static/: readthedocs-custom.css
previous/src/smart_documentation/Templates/github_workflows_yml/: github_workflows_yml.py
previous/src/smart_documentation/Templates/github_workflows_yml/Template/.github/workflows/: smart_documentation.yml
previous/src/smart_documentation/Templates/jameskabbes/: jameskabbes.py
project/: advanced_operations.py  basic_operations.py  load_config.py
