[metadata]
name = kabbes_smart_documentation
version = 0.10.0
author = James Kabbes
author_email = james.kabbes@gmail.com
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/kabbes_smart_documentation
project_urls =
    GitHub = https://github.com/jameskabbes/smart_documentation
    Documentation = https://jameskabbes.github.io/smart_documentation
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    kabbes_py_starter
    kabbes_parent_class
    kabbes_dir_ops
    kabbes_repository_generator
    kabbes_pypi_builder

[options.packages.find]
where = src